k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libraryapp-service
spec:
  selector:
    app: libraryapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
  type: ClusterIP
