k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libraryapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: libraryapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libraryapp-service
                port:
                  number: 8000
